--- a/src/components/Shuffle/style.scss
+++ b/src/components/Shuffle/style.scss
@@ -1,6 +1,6 @@
-@import '../../assets/scss/main.scss';
+@import "../../assets/scss/main.scss";
 
-.experience-unit {
+.shuffle {
   .image {
     width: 100%;
     height: 130px;
@@ -27,7 +27,7 @@
   .time-period {
     font-size: 1.2rem;
     line-height: 0.9rem;
-    padding-bottom: 12px;
+    padding-bottom: 0.75rem;
   }
 
   .description {
@@ -35,22 +35,22 @@
     font-size: 1.4rem;
   }
 
-  @include media('>=medium', '<large') {
+  @include media(">=medium", "<large") {
     .image {
       height: 110px;
     }
   }
 
-  @include media('<=medium', '>xsmall') {
-    padding-bottom: 15px;
+  @include media("<=medium", ">xsmall") {
+    padding-bottom: 1rem;
 
     .image {
       height: 140px;
     }
   }
 
-  @include media('<=xsmall') {
-    padding-bottom: 15px;
+  @include media("<=xsmall") {
+    padding-bottom: 1rem;
 
     .image {
       height: 160px;
