--- a/src/components/Sidebar/About/style.scss
+++ b/src/components/Sidebar/About/style.scss
@@ -11,7 +11,7 @@ $margin-bottom: 40px;
     max-width: $max-width;
     height: 180px;
     background-size: cover;
-    background-image: url(../../../assets/images/srdjan-rakic.jpg);
+    background-image: url(../../../assets/images/srdjan-rakic.png);
     background-repeat: no-repeat;
     background-position: center center;
     border-radius: 50%;
